fix: allow Vercel preview deployments with CORS origin patterns